--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ on:
   - pull_request
 
 jobs:
-  run-tests:
+  run-tests-1:
     strategy:
       fail-fast: false
       matrix:
@@ -59,4 +59,31 @@ jobs:
 
       - name: Test with tox
         run: tox
+
+  run-tests-2:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest, windows-latest ]
+        python-version: [ '3.6', '3.7', '3.8', '3.9' ]
+
+    name: Test
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install tox tox-gh-actions
+
+      - name: Test with tox
+        run: tox
+
 
